Starting to shrink down the image size